Rename axaccess acacia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(AXAccess)
+project(Acacia)
 
 # Enable cmake_print_variables() and cmake_print_properties() for debugging
 include(CMakePrintHelpers)
@@ -14,7 +14,7 @@ else()
 endif()
 
 project(
-  axaccess
+  acacia
   VERSION 1.0
   LANGUAGES ${PROJECT_LANGUAGES}
 )
@@ -30,7 +30,7 @@ include_directories(
 
 ## Feature flag for cross-platform library, OFF by default
 option(
-  AXA_LIBAXACCESS
+  AXA_LIBACACIA
   "Build cross-platform library (experimental)"
   OFF
 )
