--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -14,7 +14,7 @@ endif(WIN32)
 
 
 # Cross-platform examples (experimental)
-if (AXA_LIBAXACCESS)
+if (AXA_LIBACACIA)
   # EXAMPLE: cross-platform `dump_tree`
   add_executable(
     dump_tree
@@ -24,7 +24,7 @@ if (AXA_LIBAXACCESS)
   target_link_libraries(
     dump_tree
     PRIVATE
-      axaccess
+      acacia
   )
 
   if (LINUX)
@@ -34,4 +34,4 @@ if (AXA_LIBAXACCESS)
         acacia_atspi
     )
   endif (LINUX)
-endif (AXA_LIBAXACCESS)
+endif (AXA_LIBACACIA)
