--- a/lib/ia2/CMakeLists.txt
+++ b/lib/ia2/CMakeLists.txt
@@ -34,7 +34,7 @@ target_compile_definitions(
   PRIVATE
     # preprocessor macro to specify we are building a binary .dll, in which
     # case all AXA_EXPORTS will result in a dllexport statement.
-    axaccess_EXPORTS
+    acacia_EXPORTS
 )
 
 
