Rename cross platform lib to "acacia cat" or "acat" (Cross-platform Accessibility Tree)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ include_directories(
 
 ## Feature flag for cross-platform library, OFF by default
 option(
-  AXA_LIBACACIA
+  ACACIA_CAT
   "Build cross-platform library (experimental)"
   OFF
 )
