--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -30,7 +30,7 @@ if (AXA_LIBACACIA)
     acacia
     PRIVATE
       # preprocessor macro to specify we are building a binary .dll, in which
-      # case all AXA_EXPORTS will result in a dllexport statement.
+      # case all ACACIA_EXPORTS will result in a dllexport statement.
       acacia_EXPORTS
   )
 
