--- a/examples/mac/CMakeLists.txt
+++ b/examples/mac/CMakeLists.txt
@@ -13,7 +13,7 @@ target_link_libraries(
   dump_tree_axapi
 
   # Items to link into the target
-  PRIVATE axapi_inspect
+  PRIVATE acacia_axapi
 )
 
 add_executable(
@@ -29,7 +29,7 @@ target_link_libraries(
   attribute_types
 
   # Items to link into the target
-  PRIVATE axapi_inspect
+  PRIVATE acacia_axapi
 )
 
 if (ACACIA_NODEJS)
@@ -37,11 +37,11 @@ if (ACACIA_NODEJS)
     dump_tree_axapi.js
     ALL
     DEPENDS
-      axapi_inspect.node
+      acacia_axapi.node
     COMMAND
       ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/dump_tree_axapi.js ${CMAKE_CURRENT_BINARY_DIR}/dump_tree_axapi.js
     COMMAND
-      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/mac/axapi_inspect.node ${CMAKE_CURRENT_BINARY_DIR}/axapi_inspect.node
+      ${CMAKE_COMMAND} -E create_symlink ${CMAKE_BINARY_DIR}/lib/mac/acacia_axapi.node ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi.node
     VERBATIM
   )
 endif (ACACIA_NODEJS)
