Rename to "Acacia" code changes (#183)
* Rename atspi_inspect to acacia_atspi

* Rename axaccess acacia

* Rename cmake flags

* Rename AXA_EXPORT to ACACIA_EXPORT

* Rename cross platform lib to "acacia cat" or "acat" (Cross-platform Accessibility Tree)

* Rename axapi_inspect and mac_inspect to acacia_axapi

* Rename ia2_inspect to acacia_ia2

* Update comments

* Rename acat namespace to acacia

* Rename axapi_acacia name space to acacia

* Final fixes for ia2_inspect rename

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(AXAccess)
+project(Acacia)
 
 # Enable cmake_print_variables() and cmake_print_properties() for debugging
 include(CMakePrintHelpers)
@@ -14,7 +14,7 @@ else()
 endif()
 
 project(
-  axaccess
+  acacia
   VERSION 1.0
   LANGUAGES ${PROJECT_LANGUAGES}
 )
@@ -30,41 +30,41 @@ include_directories(
 
 ## Feature flag for cross-platform library, OFF by default
 option(
-  AXA_LIBAXACCESS
+  ACACIA_CAT
   "Build cross-platform library (experimental)"
   OFF
 )
 
 ## Feature flag for Python bindings, OFF by default
 option(
-  AXA_PYTHON_MODULE
+  ACACIA_PYTHON
   "Build Python bindings (requires swig and python3)"
   OFF
 )
 
 ## Feature flag for NodeJS bindings, OFF by default
 option(
-  AXA_NODEJS_MODULE
+  ACACIA_NODEJS
   "Build NodeJS bindings (requires swig and node-gyp)"
   OFF
 )
 
 option(
-  AXA_BUILD_DOC
+  ACACIA_DOCS
   "Build documentation"
   OFF
 )
 
-## Enable/disable Unit tests, ON by default
+## Enable/disable tests, ON by default
 option(
-  AXA_UNIT_TESTS
-  "Enable unit tests"
+  ACACIA_TESTS
+  "Enable tests"
   ON
 )
 
-if (AXA_BUILD_DOC)
+if (ACACIA_DOCS)
   add_subdirectory(docs)
-endif (AXA_BUILD_DOC)
+endif (ACACIA_DOCS)
 
 # On windows, put all of the resulting libraries and executables in
 # `build/bin/<CONFIG>` where CONFIG is Debug, Release, etc, because
@@ -82,7 +82,7 @@ add_subdirectory(lib)
 add_subdirectory(examples)
 add_subdirectory(third_party)
 
-if (AXA_UNIT_TESTS)
+if (ACACIA_TESTS)
   include(CTest)
   add_subdirectory(tests)
-endif (AXA_UNIT_TESTS)
+endif (ACACIA_TESTS)
