--- a/lib/ia2/CMakeLists.txt
+++ b/lib/ia2/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(
   # Name
-  ia2_inspect
+  acacia_ia2
   SHARED
 
   # Sources
@@ -17,71 +17,71 @@ add_library(
 )
 
 add_dependencies(
-  ia2_inspect
+  acacia_ia2
 
   iaccessible2
 )
 
 target_link_libraries(
-  ia2_inspect
+  acacia_ia2
 
   oleacc
   iaccessible2
 )
 
 target_compile_definitions(
-  ia2_inspect
+  acacia_ia2
   PRIVATE
     # preprocessor macro to specify we are building a binary .dll, in which
-    # case all AXA_EXPORTS will result in a dllexport statement.
-    axaccess_EXPORTS
+    # case all ACACIA_EXPORTS will result in a dllexport statement.
+    acacia_EXPORTS
 )
 
 
 # SWIG Instructions to build library bindings to different languages
 # (only required if at least one binding is ON).
 
-if (AXA_PYTHON_MODULE OR AXA_NODEJS_MODULE)
+if (ACACIA_PYTHON OR ACACIA_NODEJS)
   find_package(SWIG REQUIRED)
   include(UseSWIG)
 endif()
 
-# Generate a python module called "ia2_inspect"
+# Generate a python module called "acacia_ia2"
 
-if (AXA_PYTHON_MODULE)
+if (ACACIA_PYTHON)
 
   FIND_PACKAGE(Python3 COMPONENTS Interpreter Development.Module)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
   INCLUDE_DIRECTORIES(${Python3_INCLUDE_DIRS})
 
-  SET_SOURCE_FILES_PROPERTIES(ia2_inspect.i PROPERTIES CPLUSPLUS ON)
+  SET_SOURCE_FILES_PROPERTIES(acacia_ia2.i PROPERTIES CPLUSPLUS ON)
 
   SWIG_ADD_LIBRARY(
     # The name of the c++ library used by python module
-    ia2_python_inspect
+    acacia_ia2_python
     TYPE SHARED
-    SOURCES ia2_inspect.i
+    SOURCES acacia_ia2.i
     LANGUAGE python
     OUTPUT_DIR "${WIN_OUTPUT_DIRECTORY}"
   )
 
   TARGET_LINK_LIBRARIES(
-    ia2_python_inspect
-    ia2_inspect
+    acacia_ia2_python
+    acacia_ia2
     ${Python3_LIBRARIES}
   )
 
   set_property(
-    TARGET ia2_python_inspect
+    TARGET acacia_ia2_python
     PROPERTY
       SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
   )
 
-endif(AXA_PYTHON_MODULE)
+endif(ACACIA_PYTHON)
 
 # Generate a NodeJS Module using swig + node-gyp
 
-if (AXA_NODEJS_MODULE)
+if (ACACIA_NODEJS)
   find_program(
     NODE_GYP "node-gyp"
     REQUIRED
@@ -91,28 +91,28 @@ if (AXA_NODEJS_MODULE)
   set(NODE_GYP_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/build/Release")
 
   add_custom_target(
-    ia2_inspect_node_module ALL
+    acacia_ia2_node_module ALL
     DEPENDS
-      ia2_inspect
-      ia2_inspect.node
+      acacia_ia2
+      acacia_ia2.node
   )
 
   add_custom_command(
-    OUTPUT ia2_inspect.node
+    OUTPUT acacia_ia2.node
     DEPENDS
-    "${CMAKE_CURRENT_BINARY_DIR}/ia2_nodejs_inspect_wrap.cxx"
+    "${CMAKE_CURRENT_BINARY_DIR}/acacia_ia2_nodejs_wrap.cxx"
     COMMAND
       ${NODE_GYP} configure build
-      COMMAND ${CMAKE_COMMAND} -E copy_if_different "${NODE_GYP_OUTPUT_DIR}/ia2_inspect.node" "${WIN_OUTPUT_DIRECTORY}"
+      COMMAND ${CMAKE_COMMAND} -E copy_if_different "${NODE_GYP_OUTPUT_DIR}/acacia_ia2.node" "${WIN_OUTPUT_DIRECTORY}"
     VERBATIM
   )
 
   set_property(
-    TARGET ia2_inspect_node_module
+    TARGET acacia_ia2_node_module
     APPEND
     PROPERTY ADDITIONAL_CLEAN_FILES
       ${CMAKE_CURRENT_BINARY_DIR}/build
-      ia2_inspect.node
+      acacia_ia2.node
   )
 
   # Generate `binding.gyp` file for node-gyp
@@ -122,16 +122,16 @@ if (AXA_NODEJS_MODULE)
 
   # Generate C++ wrapper for NodeJS
   add_custom_command(
-    OUTPUT ia2_nodejs_inspect_wrap.cxx
+    OUTPUT acacia_ia2_nodejs_wrap.cxx
     COMMAND
-      swig -c++ -javascript -node -o ia2_nodejs_inspect_wrap.cxx -I${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/ia2_inspect.i
+      swig -c++ -javascript -node -o acacia_ia2_nodejs_wrap.cxx -I${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/acacia_ia2.i
     VERBATIM
   )
 
   add_dependencies(
-    ia2_inspect_node_module
+    acacia_ia2_node_module
 
     iaccessible2
   )
 
-endif (AXA_NODEJS_MODULE)
+endif (ACACIA_NODEJS)
