--- a/lib/ia2/binding.gyp.in
+++ b/lib/ia2/binding.gyp.in
@@ -1,7 +1,7 @@
 {
   "targets": [
     {
-      "target_name": "ia2_inspect",
+      "target_name": "acacia_ia2",
       "include_dirs": [
         "${CMAKE_SOURCE_DIR}",
         "${CMAKE_SOURCE_DIR}/include",
@@ -17,7 +17,7 @@
         "../../../lib/ia2/ia_table2.cc",
         "../../../lib/ia2/ia_text.cc",
         "../../../lib/ia2/ia_value.cc",
-        "./ia2_nodejs_inspect_wrap.cxx",
+        "./acacia_ia2_nodejs_wrap.cxx",
       ],
       'link_settings': {
         'libraries': [
@@ -25,7 +25,7 @@
           "${CMAKE_BINARY_DIR}/third_party/ia2/lib/iaccessible2.lib",
         ]
       },
-      "defines": [ "axaccess_EXPORTS" ],
+      "defines": [ "acacia_EXPORTS" ],
       "msvs_settings": {
           "VCCLCompilerTool": {
               "AdditionalOptions": [
