Update README and docs

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -14,3 +14,12 @@ GENERATE_TREEVIEW      = YES
 
 INPUT                 += @CMAKE_SOURCE_DIR@/README.md
 USE_MDFILE_AS_MAINPAGE = @CMAKE_SOURCE_DIR@/README.md
+
+// To remove the top bar menu
+DISABLE_INDEX = YES
+GENERATE_TREEVIEW = YES
+FULL_SIDEBAR = NO
+
+// To run on search
+SEARCHENGINE = YES
+SERVER_BASED_SEARCH = NO.
