Add doxyfile full name

--- a/.github/workflows/publish_doxygen.yml
+++ b/.github/workflows/publish_doxygen.yml
@@ -14,6 +14,7 @@ jobs:
         uses: mattnotmitt/doxygen-action@v1.9.5
         with:
           working-directory: 'docs/'
+          doxyfile-path: 'Doxyfile.in'
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.9.3
