--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ endif (ACACIA_DOCS)
 # We may decide to solve this problem differently in the future, or use
 # the bin for all executables across all platforms.
 if(WIN32)
-  set(WIN_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+  set(WIN_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin/$<CONFIG>")
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${WIN_OUTPUT_DIRECTORY}")
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${WIN_OUTPUT_DIRECTORY}")
 endif(WIN32)
