--- a/lib/mac/CMakeLists.txt
+++ b/lib/mac/CMakeLists.txt
@@ -57,55 +57,9 @@ if (ACACIA_PYTHON OR ACACIA_NODEJS)
   include(UseSWIG)
 endif()
 
-# SWIG Instructions to build a python module called "acacia_axapi"
+# Build and install a python module called "acacia_axapi" using setuptools
 
 if (ACACIA_PYTHON)
-  # find_package(Python3 COMPONENTS Interpreter Development)
-
-  # include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-  # include_directories(${Python3_INCLUDE_DIRS})
-
-  # set_property(SOURCE acacia_axapi.i PROPERTY CPLUSPLUS ON)
-
-  # swig_add_library(
-  #   # The name of the c++ library used by python module
-  #   python_acacia_axapi
-  #   TYPE SHARED
-  #   LANGUAGE python
-  #   SOURCES acacia_axapi.i
-  # )
-
-  # set_target_properties(
-  #   python_acacia_axapi
-
-  #   PROPERTIES
-  #   SUFFIX .so
-  # )
-
-  # target_link_libraries(
-  #   # Target to link
-  #   python_acacia_axapi
-
-  #   # Items to link into the target
-  #   acacia_axapi
-  #   ${Python3_LIBRARIES}
-  # )
-
-  # set_property(
-  #   TARGET python_acacia_axapi
-  #   PROPERTY
-  #     SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
-  # )
-
-  # install(TARGETS
-  #   python_acacia_axapi
-  #     LIBRARY
-  #     DESTINATION "lib/${PY_MODULE_DIR}/dist-packages"
-  # )
-  # install(FILES
-  #   ${CMAKE_CURRENT_BINARY_DIR}/acacia_atspi.py DESTINATION "lib/${PY_MODULE_DIR}/dist-packages"
-  # )
-
   configure_file(setup.py.in setup.py)
 
   add_custom_target(
@@ -117,6 +71,24 @@ if (ACACIA_PYTHON)
       ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/acacia_axapi.i ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi.i
     COMMAND
       MACOSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET} python3 -m build
+  )
+
+  set_property(
+    TARGET python_acacia_axapi
+    APPEND
+    PROPERTY ADDITIONAL_CLEAN_FILES
+      ${CMAKE_CURRENT_BINARY_DIR}/__pycache__
+      ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi.egg-info
+      ${CMAKE_CURRENT_BINARY_DIR}/dist
+      ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi.i
+      ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi.py
+      ${CMAKE_CURRENT_BINARY_DIR}/acacia_axapi_wrap.cpp
+  )
+
+  add_custom_target(
+    python_acacia_axapi_install
+    DEPENDS
+      python_acacia_axapi
     COMMAND
       pip3 uninstall -y acacia_axapi
     COMMAND
